Move The contact title outside the forms and set is a sectionHeader title

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ body {
 .contact{
     width: 100%;
 }
+.contact-section_header{
+    margin-left: 120px;
+}
 
 .contact-section {
     display: flex;
