--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 .contact{
     width: 100%;
-}
+}   
 .contact-section_header{
     margin-left: 120px;
     font-size: 36px;
@@ -20,24 +20,26 @@ body {
 .contact-section {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 40px;
    
 }
 .contact-info {
     order: 1;
-    flex: 1;
+   {/* flex: 1;*/}
     display: flex;
     flex-direction: column;
-    margin-left: 70PX;
+  * margin-left: 70PX;
 }
 .contact-form {
+
     order: 2;
-    flex: 1;
+    {/*flex: 1;*/}
     padding: 20px;
   {/*  background-color: #f5f5f5;*/};
     border-radius: 5px;
 }
+
 .contactForm_name{
     display: flex;
     padding: 10px 10px;
@@ -55,16 +57,11 @@ body {
 padding: 10px 10px;
 }
 
-#email{
-    {/*width: 650px;*/  }
-    
-}
+
 .contactForm_textArea{
     padding: 10px 10px;
 }
-#textArea{
-    {/*width: 650px;*/}
-}
+
 .contact-form_button{
     width: 460px;
     padding: 10px 10px;
